Change to 'submit' event

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <body>
     <!-- Beginning of Code -->
     <h1>Portfolio</h1>
-    <button id="demo">Click Me!</button>
+    <form>
+      <button type="submit">Click Me!</button>
+    </form>
     <!-- End of Code -->
     <script type="text/javascript" src="index.js"></script>
   </body>
