--- a/index.html
+++ b/index.html
@@ -4,11 +4,27 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
-    <!-- Beginning of Code -->
-    <h1>Portfolio</h1>
-    <form>
-      <button type="submit">Click Me!</button>
-    </form>
+    <div id="wrapper">
+      <!-- Beginning of Code -->
+      <h1>Elvira's Portfolio</h1>
+
+      <div id="thumb-grid"></div>
+
+      <h2>Add New Project</h2>
+      <form>
+        <!-- <label for="name">
+          Project Title
+          <input type="text" id="" name="imgTitle" />
+        </label> -->
+        <label for="name">
+          Image URL
+          <input type="url" id="imageUrl" name="imageUrl" />
+        </label>
+        <!-- <div class="span-2-cols"> -->
+        <button type="submit">Add Image</button>
+        <!-- </div> -->
+      </form>
+    </div>
     <!-- End of Code -->
     <script type="text/javascript" src="index.js"></script>
   </body>
