JS using DOM Sports

--- a/index.html
+++ b/index.html
@@ -53,3 +53,14 @@
     <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
+
+<!-- Urls to test it:
+https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/Snowboarding1.jpg/440px-Snowboarding1.jpg
+
+https://upload.wikimedia.org/wikipedia/commons/thumb/b/bc/Rollerblading-postojna.jpg/440px-Rollerblading-postojna.jpg
+
+https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Meditating_in_Madison_Square_Park.jpg/440px-Meditating_in_Madison_Square_Park.jpg
+
+https://upload.wikimedia.org/wikipedia/commons/thumb/4/4a/Depart4x100.jpg/440px-Depart4x100.jpg
+
+https://upload.wikimedia.org/wikipedia/commons/thumb/2/28/Robert_Helenius_vs._Attila_Levin.jpg/440px-Robert_Helenius_vs._Attila_Levin.jpg -->
